Finished html code

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,276 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="author" content="Andrzej Guzik">
-	<title>Gym Website Template</title>
+	<title>Sparta Gym Website Template</title>
 	<!-- build:css css/styles.min.css -->
 	<link rel="stylesheet" href="temp/css/styles.css">
 	<!-- endbuild -->
 </head>
 <body>
+	<header class="site-header">
+		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+			<div class="container">
+				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			    	<span class="navbar-toggler-icon"></span>
+				</button>
+				<a class="navbar-brand" href="#">Sparta Gym</a>
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+				    <ul class="navbar-nav">
+				      <li class="nav-item active">
+				        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="#">About Us</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="#">Trainers</a>
+				      </li>
+					  <li class="nav-item">
+					   <a class="nav-link" href="#">Testimonials</a>
+					 </li>
+					 <li class="nav-item">
+					   <a class="nav-link" href="#">Subscriptions</a>
+					 </li>
+					 <li class="nav-item">
+					  <a class="nav-link" href="#">Contact</a>
+					</li>
+				    </ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<section class="hero">
+		<div class="container">
+			<h1>Expand Your Limits</h1>
+			<p class="lead">Consectetur adipisicing illo</p>
+			<a href="#" class="btn btn-lg btn-outline-primary" role="button">Join Us</a>
+		</div>
+	</section>
+	<main>
+		<!-- CTA Section -->
+		<section class="cta-primary">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<h2 class="text-uppercase">Prepare yourself for life, <br/>the unknown and unknowable</h2>
+					</div>
+					<div class="col-md-4 offset-md-2">
+						<a href="#" class="btn btn-md btn-primary" role="button">Free Trial Lesson</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- About Us Section -->
+		<section class="about-us">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+
+					</div>
+					<div class="col-md-6">
+						<h2>About Us</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam sit velit dolorem, illum temporibus unde molestias dicta nihil, similique nisi doloribus ratione, beatae quibusdam culpa maiores!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus asperiores facilis quod architecto aperiam cupiditate ullam, temporibus ipsa amet possimus beatae, hic earum, alias labore. Molestias quos repudiandae placeat atque possimus reprehenderit, vero obcaecati suscipit at sint labore a, maiores!</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto cumque, quos saepe tenetur eos deleniti provident facilis nostrum quod corrupti.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Our Trainers Section -->
+		<section class="our-trainers">
+			<div class="container">
+				<h2>Our Trainers</h2>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ut porro voluptate, corporis repellendus necessitatibus sequi ex commodi.</p>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card">
+						  <img class="card-img-top" src="assets/images/trainer_1.jpg" alt="John Spring Picture">
+						  <div class="card-block">
+						    <h4 class="card-title">John Spring</h4>
+							<p class="lead">Personal Trainer</p>
+						    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
+						  </div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card">
+						  <img class="card-img-top" src="assets/images/trainer_2.jpg" alt="Luke Summer Picture">
+						  <div class="card-block">
+							<h4 class="card-title">Luke Summer</h4>
+							<p class="lead">Personal Trainer</p>
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
+						  </div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card">
+						  <img class="card-img-top" src="assets/images/trainer_3.jpg" alt="Frank Winter Picture">
+						  <div class="card-block">
+							<h4 class="card-title">Frank Winter</h4>
+							<p class="lead">Personal Trainer</p>
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- CTA Section -->
+		<section class="cta-secondary">
+			<div class="container">
+				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium culpa corporis eos, assumenda quos sit impedit cum, maiores? Labore error saepe molestias, molestiae sequi nulla.</h3>
+				<a href="#" class="btn btn-lg btn-primary" role="button">Join Us</a>
+			</div>
+		</section>
+		<!-- Subscriptions Section -->
+		<section class="subscriptions">
+			<div class="container">
+				<h2>Subscriptions</h2>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, soluta dolore deserunt quos nemo!</p>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card text-center">
+						  <div class="card-header">
+						    Morning
+						  </div>
+						  <div class="card-block">
+						    <p class="card-text">$49.99 <br/><span>Regural price $79.99</span></p>
+						  </div>
+						  <img class="card-img-top" src="assets/images/morning.jpg" alt="John Spring Image">
+						  <div class="card-footer">
+						    <a href="#" class="btn btn-primary" role="button">More</a>
+						  </div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card text-center">
+						  <div class="card-header">
+						    Open
+						  </div>
+						  <div class="card-block">
+						    <p class="card-text">$99.99 <br/><span>Regural price $129.99</span></p>
+						  </div>
+						  <img class="card-img-top" src="assets/images/open.jpg" alt="John Spring Image">
+						  <div class="card-footer">
+						    <a href="#" class="btn btn-primary" role="button">More</a>
+						  </div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="card text-center">
+						  <div class="card-header">
+						    Weekend
+						  </div>
+						  <div class="card-block">
+						    <p class="card-text">$79.99 <br/><span>Regural price $99.99</span></p>
+						  </div>
+						  <img class="card-img-top" src="assets/images/weekend.jpg" alt="John Spring Image">
+						  <div class="card-footer">
+						    <a href="#" class="btn btn-primary" role="button">More</a>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Testimonials Section -->
+		<section class="testimonials">
+			<div class="container">
+				<h2>Testimonials</h2>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
+				<div class="row">
+					<div class="col-md-4">
+						<img src="assets/images/testimony_1.jpg" class="img-responsive" alt="Brad Picture">
+						<h4>Brad Jones</h4>
+						<blockquote class="testimonials__quote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
+						</blockquote>
+					</div>
+					<div class="col-md-4">
+						<img src="assets/images/testimony_2.jpg" class="img-responsive" alt="Jane Picture">
+						<h4>Jane Doe</h4>
+						<blockquote class="testimonials__quote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
+						</blockquote>
+					</div>
+					<div class="col-md-4">
+						<img src="assets/images/testimony_3.jpg" class="img-responsive" alt="Jennifer Picture">
+						<h4>Jennifer Lockwood</h4>
+						<blockquote class="testimonials__quote">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
+						</blockquote>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Quote Section -->
+		<section class="quote">
+			<div class="container">
+				<blockquote class="blockquote">
+					<p class="mb-0">We must train hard. It’s not about denying a weakness may exist but about denying its right to persist.</p>
+					<footer class="blockquote-footer"> <cite>Vince McConnell</cite> <span>(Personal Coach)</span></footer>
+				</blockquote>
+			</div>
+		</section>
+		<!-- Contact Us Section -->
+		<section class="contact-us">
+			<div class="container">
+				<h2>Contact Us</h2>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus dolor debitis sapiente.</p>
+				<form action="contact.php" method="post">
+					<div class="form-group">
+						<label for="name" class="sr-only">Your Name</label>
+						<input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Name">
+					</div>
+					<div class="form-group">
+						<label for="email" class="sr-only">Email address</label>
+						<input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Email">
+					</div>
+					<div class="form-group">
+						<label for="phone" class="sr-only">Your Phone</label>
+						<input type="tel" class="form-control" id="phone" aria-describedby="phone" placeholder="Phone">
+					</div>
+					<div class="form-group">
+						<label for="message" class="sr-only">Your Message</label>
+						<textarea class="form-control" id="message" aria-describedby="message" placeholder="Message"></textarea>
+					</div>
+					<button type="submit" class="btn btn-primary">Send Message</button>
+				</form>
+			</div>
+		</section>
+	</main>
+	<footer class="site-footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h4>Sparta Gym</h4>
+					<p>123 Gym Boardwalk,Amsterdam</p>
+					<p>Phone: 1-800-123-4-567, <br/> (0-800) 123-4567</p>
+					<p>www.spartagym.com <br/> contact@spartagym.com</p>
+				</div>
+				<div class="col-md-4">
+					<h4>Opening Hours</h4>
+					<p>Mon-Fri: 7:00 am - 11:00 pm</p>
+					<p>Sat &amp; Sun: 7:30 am - 10:00 pm</p>
+					<p>Holidays: 9:00 am - 7:00 pm</p>
+				</div>
+				<div class="col-md-4">
+					<h4>Follow Us</h4>
+					<div class="social">
+						<a href="#" class="social-icon"><span class="fa fa-facebook"></span></a>
+						<a href="#" class="social-icon"><span class="fa fa-twitter"></span></a>
+						<a href="#" class="social-icon"><span class="fa fa-google-plus"></span></a>
+						<a href="#" class="social-icon"><span class="fa fa-linkedin"></span></a>
+					</div>
+				</div>
+			</div>
+			<p class="site-footer__copyright">Copyright &copy; 2017 <a href="mailto:a.guzik80@gmail.com" rel="author">Andrzej Guzik</a>. All Rights Reserved</p>
+		</div>
+	</footer>
 
 	<!-- build:js js/vendor.min.js -->
 	<script src="js/vendor/jquery.min.js"></script>
