Styled header and hero section

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<header class="site-header">
-		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+		<nav class="navbar navbar-inverse bg-inverse navbar-toggleable-md navbar-light bg-faded">
 			<div class="container">
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			    	<span class="navbar-toggler-icon"></span>
@@ -24,19 +24,19 @@
 				        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#">About Us</a>
+				        <a class="nav-link" href="#about">About Us</a>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link" href="#">Trainers</a>
+				        <a class="nav-link" href="#trainers">Trainers</a>
 				      </li>
 					  <li class="nav-item">
-					   <a class="nav-link" href="#">Testimonials</a>
+					   <a class="nav-link" href="#testimonials">Testimonials</a>
 					 </li>
 					 <li class="nav-item">
-					   <a class="nav-link" href="#">Subscriptions</a>
+					   <a class="nav-link" href="#subscriptions">Subscriptions</a>
 					 </li>
 					 <li class="nav-item">
-					  <a class="nav-link" href="#">Contact</a>
+					  <a class="nav-link" href="#contact">Contact</a>
 					</li>
 				    </ul>
 				</div>
@@ -45,9 +45,11 @@
 	</header>
 	<section class="hero">
 		<div class="container">
-			<h1>Expand Your Limits</h1>
-			<p class="lead">Consectetur adipisicing illo</p>
-			<a href="#" class="btn btn-lg btn-outline-primary" role="button">Join Us</a>
+			<div class="hero__caption">
+				<h1>Expand Your Limits</h1>
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit expedita</p>
+				<a href="#" class="btn btn-lg btn-outline-secondary" role="button">Join Us</a>
+			</div>
 		</div>
 	</section>
 	<main>
@@ -65,7 +67,7 @@
 			</div>
 		</section>
 		<!-- About Us Section -->
-		<section class="about-us">
+		<section id="about" class="about-us">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
@@ -81,7 +83,7 @@
 			</div>
 		</section>
 		<!-- Our Trainers Section -->
-		<section class="our-trainers">
+		<section id="trainers" class="our-trainers">
 			<div class="container">
 				<h2>Our Trainers</h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ut porro voluptate, corporis repellendus necessitatibus sequi ex commodi.</p>
@@ -127,7 +129,7 @@
 			</div>
 		</section>
 		<!-- Subscriptions Section -->
-		<section class="subscriptions">
+		<section id="subscriptions" class="subscriptions">
 			<div class="container">
 				<h2>Subscriptions</h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, soluta dolore deserunt quos nemo!</p>
@@ -178,7 +180,7 @@
 			</div>
 		</section>
 		<!-- Testimonials Section -->
-		<section class="testimonials">
+		<section id="testimonials" class="testimonials">
 			<div class="container">
 				<h2>Testimonials</h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
@@ -217,7 +219,7 @@
 			</div>
 		</section>
 		<!-- Contact Us Section -->
-		<section class="contact-us">
+		<section id="contact" class="contact-us">
 			<div class="container">
 				<h2>Contact Us</h2>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus dolor debitis sapiente.</p>
