Styled CTA and About Us section

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 			<div class="hero__caption">
 				<h1>Expand Your Limits</h1>
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit expedita</p>
-				<a href="#" class="btn btn-lg btn-outline-secondary" role="button">Join Us</a>
+				<a href="#" class="btn btn-xlg btn-outline-secondary" role="button">Join Us</a>
 			</div>
 		</div>
 	</section>
@@ -57,23 +57,23 @@
 		<section class="cta-primary">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<h2 class="text-uppercase">Prepare yourself for life, <br/>the unknown and unknowable</h2>
+					<div class="col-md-7 cta-primary__left">
+						<h4 class="text-uppercase">Prepare yourself for life, the unknown and unknowable</h4>
 					</div>
-					<div class="col-md-4 offset-md-2">
-						<a href="#" class="btn btn-md btn-primary" role="button">Free Trial Lesson</a>
+					<div class="col-md-3 offset-md-2 cta-primary__right">
+						<a href="#" class="btn btn-lg btn-secondary" role="button">Free Trial Lesson</a>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- About Us Section -->
-		<section id="about" class="about-us">
+		<section id="about" class="about-us wrapper">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-
+					<div class="col-lg-6 about-us__image">
+						<img src="assets/images/machines-91849.jpg" class="img-responsive" alt="sparta gym">
 					</div>
-					<div class="col-md-6">
+					<div class="col-lg-5 offset-lg-1">
 						<h2>About Us</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam sit velit dolorem, illum temporibus unde molestias dicta nihil, similique nisi doloribus ratione, beatae quibusdam culpa maiores!</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus asperiores facilis quod architecto aperiam cupiditate ullam, temporibus ipsa amet possimus beatae, hic earum, alias labore. Molestias quos repudiandae placeat atque possimus reprehenderit, vero obcaecati suscipit at sint labore a, maiores!</p>
