Styled Our Trainers Section and second CTA

--- a/src/index.html
+++ b/src/index.html
@@ -83,17 +83,17 @@
 			</div>
 		</section>
 		<!-- Our Trainers Section -->
-		<section id="trainers" class="our-trainers">
+		<section id="trainers" class="our-trainers wrapper">
 			<div class="container">
-				<h2>Our Trainers</h2>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ut porro voluptate, corporis repellendus necessitatibus sequi ex commodi.</p>
+				<h2 class="text-center">Our Trainers</h2>
+				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ut porro voluptate, corporis repellendus necessitatibus sequi ex commodi.</p>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="card">
 						  <img class="card-img-top" src="assets/images/trainer_1.jpg" alt="John Spring Picture">
 						  <div class="card-block">
 						    <h4 class="card-title">John Spring</h4>
-							<p class="lead">Personal Trainer</p>
+							<p class="trainer-title">Personal Trainer</p>
 						    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
 						  </div>
 						</div>
@@ -103,7 +103,7 @@
 						  <img class="card-img-top" src="assets/images/trainer_2.jpg" alt="Luke Summer Picture">
 						  <div class="card-block">
 							<h4 class="card-title">Luke Summer</h4>
-							<p class="lead">Personal Trainer</p>
+							<p class="trainer-title">MMA Trainer</p>
 							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
 						  </div>
 						</div>
@@ -113,7 +113,7 @@
 						  <img class="card-img-top" src="assets/images/trainer_3.jpg" alt="Frank Winter Picture">
 						  <div class="card-block">
 							<h4 class="card-title">Frank Winter</h4>
-							<p class="lead">Personal Trainer</p>
+							<p class="trainer-title">Bodybuilding Trainer</p>
 							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam saepe excepturi id recusandae, voluptate, ipsum quo consequuntur animi modi itaque, vitae. Nulla id fuga ipsum hic beatae ratione voluptatem modi!</p>
 						  </div>
 						</div>
@@ -122,10 +122,10 @@
 			</div>
 		</section>
 		<!-- CTA Section -->
-		<section class="cta-secondary">
+		<section class="cta-secondary wrapper">
 			<div class="container">
-				<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium culpa corporis eos, assumenda quos sit impedit cum, maiores? Labore error saepe molestias, molestiae sequi nulla.</h3>
-				<a href="#" class="btn btn-lg btn-primary" role="button">Join Us</a>
+				<h3 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium culpa corporis eos, assumenda quos sit impedit cum, maiores? Labore error saepe molestias, molestiae sequi nulla.</h3>
+				<a href="#" class="btn btn-xlg btn-outline-secondary" role="button">Join Us</a>
 			</div>
 		</section>
 		<!-- Subscriptions Section -->
