Styled Subscriptions section

--- a/src/index.html
+++ b/src/index.html
@@ -129,18 +129,18 @@
 			</div>
 		</section>
 		<!-- Subscriptions Section -->
-		<section id="subscriptions" class="subscriptions">
+		<section id="subscriptions" class="subscriptions wrapper">
 			<div class="container">
-				<h2>Subscriptions</h2>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, soluta dolore deserunt quos nemo!</p>
+				<h2 class="text-center">Subscriptions</h2>
+				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, soluta dolore deserunt quos nemo!</p>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="card text-center">
-						  <div class="card-header">
+						  <div class="card-header card-header-morning">
 						    Morning
 						  </div>
 						  <div class="card-block">
-						    <p class="card-text">$49.99 <br/><span>Regural price $79.99</span></p>
+						    <p class="card-text"><span>$49.99</span><br/>Regural price $79.99</p>
 						  </div>
 						  <img class="card-img-top" src="assets/images/morning.jpg" alt="John Spring Image">
 						  <div class="card-footer">
@@ -150,11 +150,11 @@
 					</div>
 					<div class="col-md-4">
 						<div class="card text-center">
-						  <div class="card-header">
+						  <div class="card-header card-header-open">
 						    Open
 						  </div>
 						  <div class="card-block">
-						    <p class="card-text">$99.99 <br/><span>Regural price $129.99</span></p>
+						    <p class="card-text"><span>$99.99</span> <br/>Regural price $129.99</p>
 						  </div>
 						  <img class="card-img-top" src="assets/images/open.jpg" alt="John Spring Image">
 						  <div class="card-footer">
@@ -164,11 +164,11 @@
 					</div>
 					<div class="col-md-4">
 						<div class="card text-center">
-						  <div class="card-header">
+						  <div class="card-header card-header-weekend">
 						    Weekend
 						  </div>
 						  <div class="card-block">
-						    <p class="card-text">$79.99 <br/><span>Regural price $99.99</span></p>
+						    <p class="card-text"><span>$79.99</span> <br/>Regural price $99.99</p>
 						  </div>
 						  <img class="card-img-top" src="assets/images/weekend.jpg" alt="John Spring Image">
 						  <div class="card-footer">
