Styled Testimonials section

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 about-us__image">
-						<img src="assets/images/machines-91849.jpg" class="img-responsive" alt="sparta gym">
+						<img src="assets/images/machines-91849.jpg" alt="sparta gym">
 					</div>
 					<div class="col-lg-5 offset-lg-1">
 						<h2>About Us</h2>
@@ -180,28 +180,31 @@
 			</div>
 		</section>
 		<!-- Testimonials Section -->
-		<section id="testimonials" class="testimonials">
+		<section id="testimonials" class="testimonials wrapper">
 			<div class="container">
-				<h2>Testimonials</h2>
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
+				<h2 class="text-center">Testimonials</h2>
+				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
 				<div class="row">
-					<div class="col-md-4">
-						<img src="assets/images/testimony_1.jpg" class="img-responsive" alt="Brad Picture">
+					<div class="col-md-4 testimonials__item">
+						<img src="assets/images/testimony_1.jpg" class="rounded-circle" alt="Brad Picture">
 						<h4>Brad Jones</h4>
+						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
 						</blockquote>
 					</div>
-					<div class="col-md-4">
-						<img src="assets/images/testimony_2.jpg" class="img-responsive" alt="Jane Picture">
+					<div class="col-md-4 testimonials__item">
+						<img src="assets/images/testimony_2.jpg" class="rounded-circle" alt="Jane Picture">
 						<h4>Jane Doe</h4>
+						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
 						</blockquote>
 					</div>
-					<div class="col-md-4">
-						<img src="assets/images/testimony_3.jpg" class="img-responsive" alt="Jennifer Picture">
+					<div class="col-md-4 testimonials__item">
+						<img src="assets/images/testimony_3.jpg" class="rounded-circle" alt="Jennifer Picture">
 						<h4>Jennifer Lockwood</h4>
+						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
 						</blockquote>
