--- a/src/index.html
+++ b/src/index.html
@@ -260,19 +260,19 @@
 	<footer class="site-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-3">
 					<h4>Sparta Gym</h4>
-					<p>123 Gym Boardwalk,Amsterdam</p>
+					<p>123 Gym Boardwalk, Amsterdam</p>
 					<p>Phone: 1-800-123-4-567, <br/> (0-800) 123-4567</p>
-					<p>www.spartagym.com <br/> contact@spartagym.com</p>
+					<p><a href="#">www.spartagym.com</a> <br/> contact@spartagym.com</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3 offset-md-2">
 					<h4>Opening Hours</h4>
-					<p>Mon-Fri: 7:00 am - 11:00 pm</p>
+					<p>Mon - Fri: 7:00 am - 11:00 pm</p>
 					<p>Sat &amp; Sun: 7:30 am - 10:00 pm</p>
 					<p>Holidays: 9:00 am - 7:00 pm</p>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-3  offset-md-1">
 					<h4>Follow Us</h4>
 					<div class="social">
 						<a href="#" class="social-icon"><span class="fa fa-facebook"></span></a>
@@ -282,7 +282,7 @@
 					</div>
 				</div>
 			</div>
-			<p class="site-footer__copyright">Copyright &copy; 2017 <a href="mailto:a.guzik80@gmail.com" rel="author">Andrzej Guzik</a>. All Rights Reserved</p>
+			<p class="site-footer__copyright text-center">Copyright &copy; 2017 <a href="mailto:a.guzik80@gmail.com" rel="author">Andrzej Guzik</a>. All Rights Reserved</p>
 		</div>
 	</footer>
 
