--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Andrzej Guzik">
 	<title>Sparta Gym Website Template</title>
 	<!-- build:css css/styles.min.css -->
-	<link rel="stylesheet" href="temp/css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<!-- endbuild -->
 </head>
 <body>
